# networking-ale-omniswitch

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  babel.cfg  omniswitch_setup  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
etc/neutron/plugins/ml2/: ml2_conf_ale_omniswitch.ini
networking_ale_omniswitch/: __init__.py  config.py  consumer.py  omniswitch_constants.py  omniswitch_device_plugin.py  omniswitch_mechanism_driver.py  omniswitch_restful_driver.py  omniswitch_telnet_driver.py
networking_ale_omniswitch/tests/: base.py  test_networking_ale_omniswitch.py
networking_ale_omniswitch/tests/unit/: omniswitch_restful_driver_test.py  omniswitch_telnet_driver_test.py  test_omniswitch_device_plugin.py  test_omniswitch_restful_driver.py  test_omniswitch_telnet_driver.py
