[metadata]
name = networking-ale-omniswitch
summary = Alatel-Lucent Enterprise Omniswitch Networking Driver 
description-file =
    README.rst
author =  Vadivel Poonathan
author-email = vadivel.poonathan@alcatel-lucent.com
home-page = https://github.com/openstack/networking-ale-omniswitch
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_ale_omniswitch
data_files =
    etc/neutron/plugins/ml2 = etc/neutron/plugins/ml2/omniswitch_network_plugin.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    ale_omniswitch = networking_ale_omniswitch.omniswitch_mechanism_driver:OmniswitchMechanismDriver
    omniswitch = networking_ale_omniswitch.omniswitch_mechanism_driver:OmniswitchMechanismDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_ale_omniswitch/locale
domain = networking-ale-omniswitch

[update_catalog]
domain = networking-ale-omniswitch
output_dir = networking_ale_omniswitch/locale
input_file = networking_ale_omniswitch/locale/networking-ale-omniswitch.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_ale_omniswitch/locale/networking-ale-omniswitch.pot

[wheel]
universal = 1
